# Data_Structures_And_Algorithms

./: .gitattributes  .gitignore  404.html  README.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  hooks.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
algebra/001_fundamentals/: index.html
algebra/002_prime_numbers/: index.html
algebra/003_number_theoretic_functions/: index.html
algebra/004_modular_arithmetic/: index.html
algebra/005_number_systems/: index.html
algebra/006_miscellaneous/: index.html
algorithms/001_Two_Pointers/: index.html
algorithms/002_Binary_Search/: index.html
algorithms/003_Binary_Search_Tree/: index.html
algorithms/004_Depth_First_Search/: index.html
algorithms/005_Breadth_First_Search/: index.html
algorithms/006_Backtracking/: index.html
algorithms/007_Dynamic_Programming/: index.html
algorithms/008_Recursion/: index.html
books/linear_algebra/: DarthmouthUniversityLinearAlgebraTools.ipynb
code_of_conduct/: index.html
combinatorics/001_Permutations/: index.html
combinatorics/001_fundamentals/: index.html
combinatorics/002_techniques/: index.html
combinatorics/003_tasks/: index.html
data_structures/001_Array/: index.html
data_structures/002_String/: index.html
data_structures/003_Linked_List/: index.html
data_structures/004_Stack/: index.html
data_structures/005_Queue/: index.html
data_structures/006_Binary_Heap/: index.html
data_structures/007_Tree/: index.html
data_structures/008_Graph/: index.html
data_structures/009_Hashtable/: index.html
design/001_Design/: index.html
docs/: code_of_conduct.md  index.md  navigation.md
docs/algebra/: 001_fundamentals.md  002_prime_numbers.md  003_number_theoretic_functions.md  004_modular_arithmetic.md  005_number_systems.md  006_miscellaneous.md
docs/algorithms/: 001_Two_Pointers.md  002_Binary_Search.md  003_Binary_Search_Tree.md  004_Depth_First_Search.md  005_Breadth_First_Search.md  006_Backtracking.md  007_Dynamic_Programming.md  008_Recursion.md  ALGORITHMS.md
docs/combinatorics/: 001_Permutations.md  001_fundamentals.md  002_techniques.md  003_tasks.md
docs/data_structures/: 001_Array.md  002_String.md  003_Linked_List.md  004_Stack.md  005_Queue.md  006_Binary_Heap.md  007_Tree.md  008_Graph.md  009_Hashtable.md  DATA_STRUCTURES.md
docs/design/: 001_Design.md
docs/geometry/: 001_elementary_operations.md  002_polygons.md  003_convex_hull.md  004_sweep_line.md  005_planar_graphs.md  006_miscellaneous.md
docs/javascript/: config.js
docs/large_language_model/: 001_nlp.md  002_word_embeddings.md  003_rnn_s_lstm_s_and_gru_s.md  004_encoder_decoder_architecture.md  005_attention_mechanism.md  006_transformers.md  007_bert.md  008_gpt.md  009_llama.md  010_mistral.md
docs/linear_algebra/: 001_matrices.md
docs/logical_reasoning/: 001_logical_reasoning.md
docs/machine_learning/: 001_supervised_learning.md  002_unsupervised_learning.md  003_semi_supervised_learning.md  004_self_supervised_learning.md  005_reinforcement_learning.md
docs/miscellaneous/: MISCELLANEOUS.md
docs/numerical_methods/: 001_search.md  002_integration.md
docs/overrides/partials/: content.html
docs/probability/: 001_probability.md  001_probability_basics.md  002_probability_problems.md
docs/regression/: 001_linear_regression.md  002_polynomial_regression.md  003_ridge_regression_l2_regularization.md  004_lasso_regression_l1_regularization.md  005_logistic_regression.md  006_elastic_net_regression.md
docs/stylesheets/: extra.css
educational_resources/stock_analysis/R_Stock/: OptionsFunctions.R  R_Ultimate_Oscillator.R  Stock_T_test.Rmd  Stock_Test_Equal_Means.R  Stock_VaR.R
educational_resources/stock_analysis/R_Stock/R_Forecast/: R_Check_Stationary.R  R_Check_Stationary_Part2.R  R_Check_Types_Stationary.R  R_Check_Types_Stationary_Part2.R  R_Forecast_ARFIMA.R  R_Forecast_ARIMA.R  R_Forecast_ARIMA_Part2.R  R_Forecast_DSHW.R  R_Forecast_ETS.R  R_Forecast_Function.R  R_Forecast_HETAF.R  R_Forecast_HOLT.R  R_Forecast_HW.R  R_Forecast_MEANF.R  R_Forecast_NAIVE.R  R_Forecast_RVF.R  R_Forecast_SES.R  R_Forecast_SINDEXF.R  R_Forecast_SMA.R  R_Forecast_SMA_Part3.R  (+28 more)
geometry/001_elementary_operations/: index.html
geometry/002_polygons/: index.html
geometry/003_convex_hull/: index.html
geometry/004_sweep_line/: index.html
geometry/005_planar_graphs/: index.html
geometry/006_miscellaneous/: index.html
large_language_model/001_nlp/: index.html
large_language_model/002_word_embeddings/: index.html
large_language_model/003_rnn_s_lstm_s_and_gru_s/: index.html
large_language_model/004_encoder_decoder_architecture/: index.html
large_language_model/005_attention_mechanism/: index.html
large_language_model/006_transformers/: index.html
large_language_model/007_bert/: index.html
large_language_model/008_gpt/: index.html
large_language_model/009_llama/: index.html
large_language_model/010_mistral/: index.html
linear_algebra/001_matrices/: index.html
logical_reasoning/001_logical_reasoning/: index.html
machine_learning/001_supervised_learning/: index.html
machine_learning/002_unsupervised_learning/: index.html
machine_learning/003_semi_supervised_learning/: index.html
machine_learning/004_self_supervised_learning/: index.html
machine_learning/005_reinforcement_learning/: index.html
navigation/: index.html
numerical_methods/001_search/: index.html
numerical_methods/002_integration/: index.html
probability/001_probability/: index.html
probability/001_probability_basics/: index.html
probability/002_probability_problems/: index.html
regression/001_linear_regression/: index.html
regression/002_polynomial_regression/: index.html
regression/003_ridge_regression_l2_regularization/: index.html
regression/004_lasso_regression_l1_regularization/: index.html
regression/005_logistic_regression/: index.html
regression/006_elastic_net_regression/: index.html
search/: search_index.json
sm2774us/version/: __init__.py
tags/: index.html
(+222 files in other folders)
